# test_rune

./: Cargo.toml  LICENSE  README.md  test.rs
src/: main.rs
src/npc/: mod.rs  npcdata.rs  npcscript.rs  npcstorage.rs
