[package]
name = "demo"
version = "0.1.0"
authors = ["Andrew Lee Wheeler <genusistimelord@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
failure = "0.1.8"
rune = {git = "https://github.com/rune-rs/rune.git"}
runestick = {git = "https://github.com/rune-rs/rune.git"}
serde= { version = "1.0.116", features = ["derive"]}
serde_json ="1.0.57"